# ndk-uvc-cam-app

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml  README.md
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/back/: back_camera.cpp  back_camera.h
app/src/main/cpp/common/: logging.h  time_utils.h
app/src/main/cpp/uvc/: uvc_camera.cpp  uvc_camera.h
app/src/main/java/com/uzera/camcpp/: BackAction.kt  MainActivity.kt  UvcAction.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
